--- a/package.json
+++ b/package.json
@@ -10,12 +10,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "start": "start-storybook -p 6006 -s public",
+    "build": "build-storybook -s public"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +37,7 @@
     "@storybook/addon-links": "^6.1.11",
     "@storybook/node-logger": "^6.1.11",
     "@storybook/preset-create-react-app": "^3.1.5",
+    "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.1.11",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -48,6 +45,7 @@
     "@types/jest": "^26.0.19",
     "@types/node": "^12.19.9",
     "@types/react": "^16.14.2",
-    "@types/react-dom": "^16.9.10"
+    "@types/react-dom": "^16.9.10",
+    "add": "^2.0.6"
   }
 }
