--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "start-storybook -p 6006 -s public",
+    "start": "start-storybook -s public",
     "build": "build-storybook -s public"
   },
   "eslintConfig": {
@@ -46,6 +45,12 @@
     "@types/node": "^12.19.9",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
-    "add": "^2.0.6"
+    "add": "^2.0.6",
+    "css-loader": "^5.0.1",
+    "node-sass-magic-importer": "^5.3.2",
+    "react-scripts": "4.0.1",
+    "sass": "^1.30.0",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0"
   }
 }
