Implement enough for Luke Skywalker.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,13 @@
 {
   "cSpell.words": [
+    "Anakin's",
     "Comms",
     "Hardpoint",
     "Lightsaber",
     "Matics",
     "Sider",
     "Sith",
+    "Skywalker",
     "antd",
     "browserslist",
     "esnext",
