--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
   "cSpell.words": [
     "Anakin's",
+    "Astromech",
     "Comms",
     "Hardpoint",
     "Lightsaber",
     "Matics",
+    "Repulsor",
     "Sider",
     "Sith",
     "Skywalker",
