--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,12 +4,15 @@
     "Astromech",
     "Comms",
     "Hardpoint",
+    "Iden's",
+    "Idens",
     "Lightsaber",
     "Matics",
     "Repulsor",
     "Sider",
     "Sith",
     "Skywalker",
+    "Vaders",
     "antd",
     "browserslist",
     "esnext",
