--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,12 @@
 {
   "cSpell.words": [
+    "'s",
     "Anakin's",
     "Astromech",
     "Comms",
+    "Fett",
+    "Fett's",
+    "Fett\\'s",
     "Hardpoint",
     "Iden's",
     "Idens",
