Add basic command card templates.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "'s",
     "Anakin's",
     "Astromech",
+    "Boba",
     "Comms",
     "Fett",
     "Fett's",
@@ -10,6 +11,7 @@
     "Hardpoint",
     "Iden's",
     "Idens",
+    "Jetpack",
     "Lightsaber",
     "Matics",
     "Repulsor",
