--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "html2canvas": "^1.0.0-rc.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4"
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "start": "start-storybook -s public",
